syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.a.eye.skywalking.trace.proto.message";


message SegmentMessage{

}
